packages/rspack-test-tools/tests/configCases/errors/hide-stack/errors.js
module.exports = [
  [/emit message hide/, { details: /emit stack hide/ }],
  [/emit stack/]
]
